fix(styles): updates gap in topic-teaser
updates or adds the gap between the title and link-list of the topic-teaser-content class

--- a/packages/styles/src/components/topic-teaser.scss
+++ b/packages/styles/src/components/topic-teaser.scss
@@ -119,10 +119,14 @@
       @include make-col($size);
     }
   }
+  @each $breakpoint, $gap in topic-teaser.$content-gap {
+    @include media-breakpoint-up($breakpoint) {
+      gap: $gap;
+    }
+  }
 
   @include media-breakpoint-up(rg) {
     flex-direction: row;
-    gap: var(--post-gutter-x);
   }
 }
 
