--- a/packages/styles/src/variables/components/_topic-teaser.scss
+++ b/packages/styles/src/variables/components/_topic-teaser.scss
@@ -9,6 +9,12 @@ $content-cols: (
   xl: 7,
 );
 
+$content-gap: (
+  xs: 10px,
+  rg: 32px,
+  xl: 40px,
+);
+
 $image-cols: (
   xs: 10,
   rg: 8,
